# Streaming_Data_Exploration

./: README.md  pyproject.toml
data/processed/: streaming_platforms_prices_cleaned.csv  streaming_platforms_prices_processed.csv
data/raw/: data_apple_tv.csv  data_hbo_max.csv
notebooks/: 01_data_loading.ipynb  02_Data_Cleaning.ipynb  03_data_visualization.ipynb
proyecto_EDA/: pyvenv.cfg
proyecto_EDA/Scripts/: activate  activate.bat
