[tool.poetry]
name = "eda-sergio"
version = "0.1.0"
description = ""
authors = ["Sergio050799 <garciaandradesergio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
pandas = "^2.2.2"
pydantic = "^2.9.1"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
polars = "^1.7.1"
pymongo = "^4.8.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
